--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My solutions for AdventJS",
   "main": "index.js",
   "scripts": {
+    "push": "git add . && git commit -m 'commit' && git push origin master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
