--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My solutions for AdventJS",
   "main": "index.js",
   "scripts": {
-    "push": "git add . && git commit -m 'commit' && git push origin master",
+    "git": "git add . && git commit -m",
+    "postgit": "git push --all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
