challenges 3-21 submitted and all files linted

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "git": "git add . && git commit -m",
-    "postgit": "git push --all",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postgit": "git push --all"
   },
   "keywords": [
     "adventjs",
@@ -17,5 +16,12 @@
   "author": "marsigliadev",
   "license": "ISC",
   "homepage": "https://github.com/marsigliadev/adventjs-solutions#readme",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "5.2.0"
+  }
 }
