package.json file updated

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "keywords": [
     "adventjs",
-    "advent",
-    "JavaScript",
-    "Solutions"
+    "JavaScript"
   ],
   "author": "marsigliadev",
   "license": "ISC",
