--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,4 @@
 {
-	"extends": ["prettier", "marsi/ts"],
-	"rules": {
-		"@typescript-eslint/no-non-null-assertion": "off",
-		"@typescript-eslint/consistent-type-imports": ["warn", { "fixStyle": "separate-type-imports" }]
-	}
+	"extends": ["prettier", "marsi"],
+	"rules": {}
 }
